Div Rechtschreibfehler (thx to Minos)

--- a/trunk/ressourcen/jd/languages/german.lng
+++ b/trunk/ressourcen/jd/languages/german.lng
@@ -1,4 +1,4 @@
-addons.jdlowspeed.statusmessage.disabled = Low Speederkennung ausschalten
+﻿addons.jdlowspeed.statusmessage.disabled = Low Speederkennung ausschalten
 addons.jdlowspeed.statusmessage.enabled = Low Speederkennung einschalten
 addons.jdshutdown.menu.disable = Herunterfahren deaktivieren
 addons.jdshutdown.menu.enable = Herunterfahren aktivieren
@@ -10,7 +10,7 @@ addons.schedule.menu.create = Neu
 addons.schedule.menu.edit = Barbeiten
 addons.schedule.menu.finished = Abgeschlossen
 addons.schedule.menu.maxdl = max. Downloads
-addons.schedule.menu.maxspeed = max. DownloadGeschwindigkeit
+addons.schedule.menu.maxspeed = max. Downloadgeschwindigkeit
 addons.schedule.menu.p_time = Bitte einen Zeitpunkt in der Zukunft wählen
 addons.schedule.menu.reconnect = Reconnect?
 addons.schedule.menu.redo = Zurückstellen in[Stunden]
@@ -18,7 +18,7 @@ addons.schedule.menu.remain = Verbleibend:
 addons.schedule.menu.remove = Entfernen
 addons.schedule.menu.running = Angehalten!
 addons.schedule.menu.start = Start
-addons.schedule.menu.start_stop = Start/Stop Download ?
+addons.schedule.menu.start_stop = Start/Stop Download?
 addons.schedule.menu.stop = Stop
 addons.schedule.menu.time = Zeitpunkt wählen:
 addons.schedule.name = Zeitplaner
@@ -150,17 +150,17 @@ gui.config.clr.name = Reconnect via CLR
 gui.config.clr.script = CLR Script
 gui.config.download.autochunks = Chunks an Dateigröße anpassen.
 gui.config.download.autoresume = Reconnect darf weiterführbare Downloads unterbrechen
-gui.config.download.buffersize = Max. Buffersize[MB]
-gui.config.download.chunks = Anzahl der Verbindungen/Datei(Chunkload
+gui.config.download.buffersize = Max. Buffersize [MB]
+gui.config.download.chunks = Anzahl der Verbindungen/Datei (Chunkload)
 gui.config.download.connectionlost.wait = Wartezeit nach Verbindungsabbruch [s]
 gui.config.download.crc = SFV/CRC Check wenn möglich durchführen
 gui.config.download.download.tab = Downloadsteuerung
-gui.config.download.downloadthread = Gleichzeitig downloaden und auf Festplatte schreiben
-gui.config.download.ipcheck.disable = IP Überprüfung deaktivieren
-gui.config.download.ipcheck.externalinterval = External IP Check Interval [sec]
-gui.config.download.ipcheck.mask = Erlaubte IPs
+gui.config.download.downloadthread = Gleichzeitigs Downloaden und auf die Festplatte schreiben
+gui.config.download.ipcheck.disable = IP Überprüfung deaktivieren (nicht empfohlen!)
+gui.config.download.ipcheck.externalinterval = Zeitabstand der externen Ip Überprüfung [sec]
+gui.config.download.ipcheck.mask = Erlaubte IP`s
 gui.config.download.ipcheck.regex = RegEx zum filtern der IP
-gui.config.download.ipcheck.website = IP prüfen über (Website
+gui.config.download.ipcheck.website = IP prüfen über (Website)
 gui.config.download.name = Netzwerk/Download
 gui.config.download.network.extended = Erweiterte Einstellungen
 gui.config.download.network.tab = Internet & Netzwerkverbindung
@@ -256,7 +256,7 @@ gui.config.packagemanager.supportjd = Unterstützte JD durch Herunterladen von a
 gui.config.packagemanager.supportjd.instanthelp = http://wiki.jdownloader.org/index.php?title=Addon-Manager
 gui.config.packagemanager.table.info = Info
 gui.config.plugin.abg_confirm = Ich habe die AGB/TOS/FAQ von %s gelesen und erkläre mich damit einverstanden
-gui.config.plugin.container.column_author = Ersteller
+gui.config.plugin.container.column_author = Autor
 gui.config.plugin.container.column_host = Host
 gui.config.plugin.container.column_version = Version
 gui.config.plugin.container.name = Container
@@ -265,11 +265,11 @@ gui.config.plugin.decrypt.name = Decrypt Plugins
 gui.config.plugin.host.btn_load = Lade Plugin
 gui.config.plugin.host.column_agb2 = AGB
 gui.config.plugin.host.column_agbchecked2 = akzeptieren
-gui.config.plugin.host.column_coder2 = Ersteller
+gui.config.plugin.host.column_coder2 = Autor
 gui.config.plugin.host.column_host2 = Host
 gui.config.plugin.host.column_id2 = ID
 gui.config.plugin.host.column_version2 = Version
-gui.config.plugin.host.desc = ACHTUNG!! Das JD Team übernimmt keine Verantwortung für die Einhaltung der AGB \r\n der Hoster. Bitte lesen Sie die AGB aufmerksam und aktivieren Sie das Plugin nur,\r\nfalls Sie sich mit diesen Einverstanden erklären!\r\nDie Reihenfolge der Plugins bestimmt die Prioritäten der automatischen Mirrorauswahl\n\rBevorzugte Hoster sollten oben stehen!
+gui.config.plugin.host.desc = ACHTUNG!!! Das JD Team übernimmt keine Verantwortung für die Einhaltung der AGB`s \r\n der Hoster. Bitte lesen Sie die AGB`s aufmerksam durch und aktivieren Sie das Plugin nur,\r\nfalls Sie sich mit diesen Einverstanden erklären!\r\nDie Reihenfolge der Plugins bestimmt die Prioritäten der automatischen Mirrorauswahl\n\rBevorzugte Hoster sollten oben stehen!
 gui.config.plugin.host.name = Host Plugins
 gui.config.plugin.host.readagb = AGB
 gui.config.plugin.optional.btn_opendir = Addon Ordner öffnen
@@ -456,7 +456,7 @@ gui.menu.action.changes.desc = Zeige letzte Änderungen
 gui.menu.action.changes.mnem = C
 gui.menu.action.changes.name = Changelog
 gui.menu.action.clipboard.accel = CTRL+8
-gui.menu.action.clipboard.desc = Zwischenablage überwachen
+gui.menu.action.clipboard.desc = Zwischenablage überwachen an/aus
 gui.menu.action.clipboard.mnem = Z
 gui.menu.action.clipboard.name = Zwischenablage
 gui.menu.action.configuration.accel = F11
@@ -505,7 +505,7 @@ gui.menu.action.install.filefilter = JD Addons
 gui.menu.action.install.mnem = I
 gui.menu.action.install.name = Addon installieren
 gui.menu.action.load.accel = CTRL+O
-gui.menu.action.load.desc = Container öffnen (RSDF,CCF,DLC,Backups,..)
+gui.menu.action.load.desc = Container öffnen (RSDF, CCF, DLC, Backups, ...)
 gui.menu.action.load.mnem = F
 gui.menu.action.load.name = Container öffnen
 gui.menu.action.passwordlist.accel = F3
@@ -517,7 +517,7 @@ gui.menu.action.pause.desc = Nach diesem Download anhalten
 gui.menu.action.pause.mnem = E
 gui.menu.action.pause.name = Pause
 gui.menu.action.reconnect.accel = CTRL+R
-gui.menu.action.reconnect.desc = Einen Reconnect durchführen
+gui.menu.action.reconnect.desc = Einen manuellen Reconnect durchführen
 gui.menu.action.reconnect.mnem = R
 gui.menu.action.reconnect.name = Reconnect durchführen
 gui.menu.action.remove.links.desc = Entferne vollständige Downloads
@@ -529,7 +529,7 @@ gui.menu.action.restart.name = Restart
 gui.menu.action.save.accel = CTRL+S
 gui.menu.action.save.desc = Als DLC speichern
 gui.menu.action.save.mnem = S
-gui.menu.action.save.name = Downloadliste speichern(DLC)
+gui.menu.action.save.name = Downloadliste speichern (DLC)
 gui.menu.action.start.accel = CTRL+9
 gui.menu.action.start.desc = Start/Stop Downloads
 gui.menu.action.start.mnem = D
@@ -543,7 +543,7 @@ gui.menu.action.unrar.desc = Entpackt alle geladenen Archive
 gui.menu.action.unrar.mnem = E
 gui.menu.action.unrar.name = Entpacken
 gui.menu.action.update.accel = CTRL+7
-gui.menu.action.update.desc = Update ausführen
+gui.menu.action.update.desc = Nach neuen Updates suchen
 gui.menu.action.update.mnem = A
 gui.menu.action.update.name = Update
 gui.menu.action.viewlog.accel = F4
@@ -679,7 +679,7 @@ interaction.batchreconnect.retries = Max. Wiederholungen (-1 = unendlich)
 interaction.batchreconnect.terminal = Interpreter
 interaction.batchreconnect.tostring = Batch Reconnect durchführen
 interaction.batchreconnect.waitforip = Auf neue IP warten [sek]
-interaction.batchreconnect.waitfortermination = Warte x Sekunden bis Befehl beendet ist [sek]
+interaction.batchreconnect.waitfortermination = Wartezeit bis der Befehl beendet ist [sek]
 interaction.batchreconnect.waittimetofirstipcheck = Wartezeit bis zur ersten IP-Überprüfung [sek]
 interaction.captchamethodloader.name = Captcha Erkennung aktualisieren
 interaction.dlcconverter.ccf = *.CCF:
@@ -978,7 +978,7 @@ plugins.optional.jdchat.user = Nickname
 plugins.optional.jdlighttray.minimizetotray = Zum Tray minimieren
 plugins.optional.jdlighttray.name = JDLightTrayIcon
 plugins.optional.jdlighttray.startminimized = Minimiert starten
-plugins.optional.jdlowspeed.maxspeed = Maximale Internetgeschwindigkeit in kb/s (DSL 3000≈350kb/s)
+plugins.optional.jdlowspeed.maxspeed = Maximale Internetgeschwindigkeit in kb/s (DSL 3000˜350kb/s)
 plugins.optional.jdlowspeed.minspeed = Mindestgeschwindigkeit für einen Download in kb/s
 plugins.optional.jdlowspeed.name = LowSpeed Erkennung
 plugins.optional.jdlowspeed.rsonly = Nur Raidshare überwachen
@@ -1174,3 +1174,4 @@ train.choose.folder = Wählen sie einen Ordner aus
 train.chooser.title = jDownloader - Train All
 train.method = Wählen Sie eine Methode aus:
 wrapper.webupdate.updatefile = Plugin %s aktualisieren
+
