--- a/trunk/ressourcen/jd/languages/Spanish.lng
+++ b/trunk/ressourcen/jd/languages/Spanish.lng
@@ -169,45 +169,28 @@ gui.config.liveHeader.warning.wizard = La configuración de búsqueda puede tard
 gui.config.liveHeader.warning.yourRouter = Tu tienes un
 gui.config.plugin.abg_confirm = He leido el AGB/TOS/FAQ de %s y lo he aceptado!
 gui.config.plugin.container.btn_settings = Configuración
-gui.config.plugin.container.column_author = Autor
-gui.config.plugin.container.column_host = Equipo
-gui.config.plugin.container.column_id = ID
-gui.config.plugin.container.column_version = Versión
+gui.column_host = Equipo
+gui.column_id = ID
+gui.column_version = Versión
 gui.config.plugin.container.name = Contenido
 gui.config.plugin.decrypt.btn_settings = Configuración
 gui.config.plugin.decrypt.name = Descifrar plugins
 gui.config.plugin.defaultName = configuración de plugins
 gui.config.plugin.host.btn_settings = Configuración
-gui.config.plugin.host.column_agb = TOS
-gui.config.plugin.host.column_agb2 = AGB
-gui.config.plugin.host.column_agbChecked = *
-gui.config.plugin.host.column_agbChecked2 = Aceptado
-gui.config.plugin.host.column_author = Autor
-gui.config.plugin.host.column_coder2 = Creador
-gui.config.plugin.host.column_host = Equipo
-gui.config.plugin.host.column_host2 = Equipo
-gui.config.plugin.host.column_id = ID
-gui.config.plugin.host.column_id2 = ID
-gui.config.plugin.host.column_version = Versión
-gui.config.plugin.host.column_version2 = Versión
+gui.column_agb = AGB
+gui.column_agbChecked = Aceptado
+gui.column_coder = Creador
 gui.config.plugin.host.desc = Atención!\r\nEl Equipo jD no se responsabiliza del uso de la TOS.\r\n Por favor, lea las Condiciones de Uso y activar el plugin sólo\r\nsi aceptas los términos de uso!\r\nEl orden de los plugins define la prioridad de la selección automática de espejo.\n\r La preferencia plugins debe ser en la parte superior! 
 gui.config.plugin.host.name = Anfitrión de plugins
 gui.config.plugin.host.readAGB = Lea TOS
 gui.config.plugin.optional.btn_settings = Configuración
 gui.config.plugin.optional.btn_toggleStatus = On/Off
-gui.config.plugin.optional.column_author = Codificar
-gui.config.plugin.optional.column_id = ID
-gui.config.plugin.optional.column_needs = Necesidades
-gui.config.plugin.optional.column_plugin = Plugin
-gui.config.plugin.optional.column_status = Estado
-gui.config.plugin.optional.column_version = Versión
+gui.column_needs = Necesidades
+gui.column_plugin = Plugin
+gui.column_status = Estado
 gui.config.plugin.optional.name = Plugins Opcionales
 gui.config.plugin.optional.statusActive = On
 gui.config.plugin.optional.statusInactive = Off
-gui.config.plugin.search.btn_settings = Configuración
-gui.config.plugin.search.column_author = Autor
-gui.config.plugin.search.column_host = Equipos
-gui.config.plugin.search.column_id = ID
 gui.config.plugin.search.name = Busqueda para plugins
 gui.config.popup.btn_cancel = Cancelar
 gui.config.popup.btn_ok = OK
