--- a/trunk/ressourcen/jd/languages/Turkish.lng
+++ b/trunk/ressourcen/jd/languages/Turkish.lng
@@ -291,48 +291,31 @@ gui.config.packagemanager.reset = Sürümleri Sıfırla
 gui.config.packagemanager.table.info = Bilgi
 gui.config.plugin.abg_confirm = %s AGB/TOS/FAQ'larını okudum ve kabul ediyorum!
 gui.config.plugin.container.btn_settings = Ayarlar
-gui.config.plugin.container.column_author = Yaratıcı
-gui.config.plugin.container.column_host = Host
-gui.config.plugin.container.column_id = ID
-gui.config.plugin.container.column_version = Sürüm
+gui.column_host = Host
+gui.column_id = ID
+gui.column_version = Sürüm
 gui.config.plugin.container.name = Konteyner
 gui.config.plugin.decrypt.btn_settings = Ayarlar
 gui.config.plugin.decrypt.name = Deşifreleme
 gui.config.plugin.defaultName = Takmabirim ayarları
 gui.config.plugin.host.btn_settings = Ayarlar
-gui.config.plugin.host.column_agb = TOS
-gui.config.plugin.host.column_agb2 = AGB
-gui.config.plugin.host.column_agbChecked = *
-gui.config.plugin.host.column_agbChecked2 = Kabul edildi
-gui.config.plugin.host.column_author = Yaratıcı
-gui.config.plugin.host.column_coder2 = Yaratıcı
-gui.config.plugin.host.column_host = Barındırıcı
-gui.config.plugin.host.column_host2 = Barındırıcı
-gui.config.plugin.host.column_id = ID
-gui.config.plugin.host.column_id2 = ID
-gui.config.plugin.host.column_version = Sürüm
-gui.config.plugin.host.column_version2 = Sürüm
+gui.column_agb = AGB
+gui.column_agbChecked = Kabul edildi
+gui.column_coder = Yaratıcı
 gui.config.plugin.host.desc = Dikkat!!\r\njD Takımı Hostlarla olan (TOS) anlaşma ve kuralları ihlali ile ilgili sorumluluk kabul etmez!!!\r\nLütfen TOS yi okuyun ve sadece şartlarını kabul ederseniz takmabirimi etkin duruma getirin!!\r\nTakma birimlerdeki sıralama otomatik Yansıma seçimindeki önceliği belirler.\n\rTercih edilen takma birimler üstte olmalıdır!
 gui.config.plugin.host.name = Barındırıcı Takma Birimleri
 gui.config.plugin.host.readAGB = TOS oku
 gui.config.plugin.optional.btn_openDir = Eklenti Klasörünü Aç
 gui.config.plugin.optional.btn_settings = Ayarlar
 gui.config.plugin.optional.btn_toggleStatus = Açık/Kapalı
-gui.config.plugin.optional.column_author = Kodlayan
-gui.config.plugin.optional.column_id = Kimlik
-gui.config.plugin.optional.column_needs = Gerekli
-gui.config.plugin.optional.column_plugin = Takma birim
-gui.config.plugin.optional.column_status = Durum
-gui.config.plugin.optional.column_version = Sürüm
+gui.column_needs = Gerekli
+gui.column_plugin = Takma birim
+gui.column_status = Durum
 gui.config.plugin.optional.link_help = http://jdownloader.org/page.php?id=122
 gui.config.plugin.optional.linktext_help = Yardım
 gui.config.plugin.optional.name = Opsiyonel Takmabirimler
 gui.config.plugin.optional.statusActive = Açık
 gui.config.plugin.optional.statusInactive = Kapalı
-gui.config.plugin.search.btn_settings = Ayarlar
-gui.config.plugin.search.column_author = Yaratıcı
-gui.config.plugin.search.column_host = Hostlar (Barındıran)
-gui.config.plugin.search.column_id = ID
 gui.config.plugin.search.name = Takma birimler için arama yap
 gui.config.popup.btn_cancel = İptal
 gui.config.popup.btn_ok = Tamam
