--- a/trunk/ressourcen/jd/languages/english.lng
+++ b/trunk/ressourcen/jd/languages/english.lng
@@ -118,6 +118,15 @@ gui.btn_yes = Yes
 gui.captchawindow.askforinput = Please enter
 gui.captchawindow.title = jAntiCaptcha actived!
 gui.captchawindow.title_error = JAntiCaptcha failed. PLease enter code!
+gui.column_agb = AGB
+gui.column_agbchecked = Accepted
+gui.column_coder = Coder
+gui.column_host = Host
+gui.column_id = ID
+gui.column_needs = Needs
+gui.column_plugin = Plugin
+gui.column_status = Status
+gui.column_version = Version
 gui.component.textarea.context.copy = Copy
 gui.component.textarea.context.delete = Delete
 gui.component.textarea.context.paste = Paste
@@ -245,29 +254,15 @@ gui.config.packagemanager.reset = Reset versions
 gui.config.packagemanager.supportjd = Support JD by downloading pumped-up-addons
 gui.config.packagemanager.table.info = Info
 gui.config.plugin.abg_confirm = I had read the AGB/TOS/FAQ of %s and accepted them!
-gui.config.plugin.container.column_author = Author
-gui.config.plugin.container.column_host = Host
-gui.config.plugin.container.column_version = Version
 gui.config.plugin.container.name = Container
 gui.config.plugin.decrypt.btn_load = Load Plugin
 gui.config.plugin.decrypt.name = Decrypt plugins
 gui.config.plugin.host.btn_load = Load Plugin
-gui.config.plugin.host.column_agb2 = AGB
-gui.config.plugin.host.column_agbchecked2 = Accepted
-gui.config.plugin.host.column_coder2 = Creator
-gui.config.plugin.host.column_host2 = Host
-gui.config.plugin.host.column_id2 = ID
-gui.config.plugin.host.column_version2 = Version
 gui.config.plugin.host.desc = Attention!!\r\nThe jD Team takes no responsibility for compliance with host TOS's. \r\nPlease read the TOS and activate the plugin only\r\nif you accept them!\r\nThe order of the plugins definies the Priority of the automatic mirror selection.\n\rPreferred plugins should be on top!
 gui.config.plugin.host.name = Host plugins
 gui.config.plugin.host.readagb = Read TOS
 gui.config.plugin.optional.btn_opendir = Open Addon directory
 gui.config.plugin.optional.btn_togglestatus = On/Off
-gui.config.plugin.optional.column_author = Coder
-gui.config.plugin.optional.column_needs = Needs
-gui.config.plugin.optional.column_plugin = Plugin
-gui.config.plugin.optional.column_status = Status
-gui.config.plugin.optional.column_version = Version
 gui.config.plugin.optional.link_help = http://www.wiki.jdownloader.org/index.php?title=Uninstalling_Add-ons
 gui.config.plugin.optional.linktext_help = Help
 gui.config.plugin.optional.name = Optional Plugins
