--- a/trunk/ressourcen/jd/languages/german.lng
+++ b/trunk/ressourcen/jd/languages/german.lng
@@ -79,6 +79,7 @@ download.error.message.exception = Ausnahmefehler:
 download.error.message.incomplete = Download unvollständig
 download.error.message.io = Schreibfehler
 download.error.message.iopermissions = Keine Schreibrechte auf der Festplatte
+download.error.message.localio = Konnte nicht in Datei schreiben: %s
 download.error.message.nibble = Nibblen nach %s Bytes abgeschlossen
 download.error.message.outofmemory = Es wird zuviel Speicher verbraucht
 download.error.message.rangeheaderparseerror = Unerwarteter Mehrfachverbindungfehler
@@ -132,6 +133,16 @@ gui.btn_yes = Ja
 gui.captchawindow.askforinput = Bitte eingeben!
 gui.captchawindow.title = jAntiCaptcha aktiv!
 gui.captchawindow.title_error = jAntiCaptcha Fehler. Bitte Code eingeben!
+gui.column_agb = AGB
+gui.column_agbchecked = akzeptieren
+gui.column_coder = Ersteller
+gui.column_host = Host
+gui.column_id = ID
+gui.column_needs = Benötigt
+gui.column_plugin = Plugin
+gui.column_status = Status
+gui.column_useplugin = Plugin benutzen
+gui.column_version = Version
 gui.component.textarea.context.copy = Kopieren
 gui.component.textarea.context.delete = Löschen
 gui.component.textarea.context.paste = Einfügen
@@ -245,27 +256,13 @@ gui.config.packagemanager.supportjd = Unterstützte JD durch Herunterladen von a
 gui.config.packagemanager.supportjd.instanthelp = http://wiki.jdownloader.org/index.php?title=Addon-Manager
 gui.config.packagemanager.table.info = Info
 gui.config.plugin.abg_confirm = Ich habe die AGB/TOS/FAQ von %s gelesen und erkläre mich damit einverstanden
-gui.config.plugin.container.column_author = Autor
-gui.config.plugin.container.column_host = Host
-gui.config.plugin.container.column_version = Version
 gui.config.plugin.decrypt.btn_load = Lade Plugin
 gui.config.plugin.host.btn_load = Lade Plugin
-gui.config.plugin.host.column_agb2 = AGB
-gui.config.plugin.host.column_agbchecked2 = akzeptieren
-gui.config.plugin.host.column_coder2 = Autor
-gui.config.plugin.host.column_host2 = Host
-gui.config.plugin.host.column_id2 = ID
-gui.config.plugin.host.column_version2 = Version
 gui.config.plugin.host.desc = ACHTUNG!!! Das JD Team übernimmt keine Verantwortung für die Einhaltung der AGB`s \r\n der Hoster. Bitte lesen Sie die AGB`s aufmerksam durch und aktivieren Sie das Plugin nur,\r\nfalls Sie sich mit diesen Einverstanden erklären!\r\nDie Reihenfolge der Plugins bestimmt die Prioritäten der automatischen Mirrorauswahl\n\rBevorzugte Hoster sollten oben stehen!
 gui.config.plugin.host.name = Host Plugins
 gui.config.plugin.host.readagb = AGB
 gui.config.plugin.optional.btn_opendir = Addon Ordner öffnen
 gui.config.plugin.optional.btn_togglestatus = An/Aus
-gui.config.plugin.optional.column_author = Coder
-gui.config.plugin.optional.column_needs = Benötigt
-gui.config.plugin.optional.column_plugin = Plugin
-gui.config.plugin.optional.column_status = Status
-gui.config.plugin.optional.column_version = Version
 gui.config.plugin.optional.link_help = http://jdownloader.org/page.php?id=122
 gui.config.plugin.optional.linktext_help = Hilfe
 gui.config.plugin.optional.statusactive = An
