1 character too much.

--- a/trunk/ressourcen/jd/languages/Polski.lng
+++ b/trunk/ressourcen/jd/languages/Polski.lng
@@ -134,7 +134,7 @@ gui.column_agbChecked = Zaakceptowane
 gui.column_coder = Autor
 gui.column_host = Host
 gui.column_id = ID
-gui.column_needs = W\ymaga
+gui.column_needs = Wymaga
 gui.column_plugin = Wtyczka
 gui.column_status = Stan
 gui.column_usePlugin = Użyj wtyczki
